# autogit

./: .gitignore  noxfile.py  pyproject.toml  pytest.ini  repo_path.bak  ruff.ci.toml  ruff.toml
requirements/: requirements.dev.txt  requirements.txt
src.bak/autogit/: cli.py  main.py
src.bak/autogit/core/: __init__.py  _platform.py
src.bak/autogit/domain/: schemas.py
src.bak/autogit/modules/git_ops/: __init__.py  methods.py
src/autogit/: main.py
src/autogit/core/: paths.py
src/autogit/domain/: __init__.py  schemas.py
src/autogit/modules/git_ops/: __init__.py  methods.py
src/autogit/modules/repofile/: __init__.py  methods.py
src/autogit/utils/git_utils/: __init__.py  methods.py
tests/: conftest.py  test_main.py
tests/autogit_core/: tests.py
tests/autogit_tests/: __init__.py  expect_pass_tests.py  methods.py
tests/fixtures/: __init__.py
tests/fixtures/_git/: __init__.py  pytest_fixtures.py
tests/fixtures/autogit/: __init__.py  pytest_fixtures.py
tests/fixtures/fs/: __init__.py  pytest_fixtures.py
tests/helpers/io/: __init__.py
tests/helpers/io/_json/: __init__.py  methods.py
